[package]
name = "metro-max"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
ctrlc = "3.5.2"
rodio = "0.22.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["timeapi", "processthreadsapi", "winbase"] }
